static/styles/layout/section.css
.section{
    border-bottom: 2px solid lightgray;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-bottom: 3rem;
    margin-bottom: 2rem;
}
.section--dark{
    color: var(--color-white);
}
.article{
    /* margin: 0 2rem; */
    padding:1em;
    border: 1px solid lightgray;
    border-radius: 10px;
    box-shadow: -10px 10px 3px 0px lightgrey;
}

